残業承認モーダル

--- a/app/views/attendances/_edit_superior_announcement.html.erb
+++ b/app/views/attendances/_edit_superior_announcement.html.erb
@@ -5,59 +5,65 @@
         <span aria-hidden="true">&times;
         </span>
         </button>
-        <% @users.each do |user| %>    
-    <h1 class="modal-title" , style="text-align:center">[<%= user.name %>からの残業申請]</h1>
-      <div class="modal-body">
       <!--tableの外にform_withがある場合はtableの外にsubmitを書く-->  
-      <%= form_with(model: @user, url: update_superior_announcement_user_attendances_path(@user), method: :patch, local: true) do |f| %>
-        <table class="apporoved-log-table-header table-bordered table-striped table-condensed">
-          <thead>
-            <tr>
-              <th>日付</th>
-              <th>曜日</th>
-              <th>終了予定時間</th>
-              <th>指定勤務終了時間</th>
-              <th>時間外時間</th>
-              <th>業務処理内容</th>
-              <th>指示者確認</th>
-              <th>変更</th>
-              <th>勤怠を確認する</th>
-            </tr>
-          </thead>
-          
-          
-            <% @attendances.each do |day| %>
-              <%= f.fields_for "attendances[]", day do |a| %> 
-              <tbody>
+        <%= form_with(model: @user, url: update_superior_announcement_user_attendances_path(@user), method: :patch, local: true) do |f| %>
+          <% @users.each do |user| %>    
+        <h1 class="modal-title" , style="text-align:center">[<%= user.name %>からの残業申請]</h1>
+          <div class="modal-body">
+            <div class= "row">
+              
+            <table class="apporoved-log-table-header table-bordered table-striped table-condensed">
+              <thead>
                 <tr>
-                  <% css_class = 
-                  case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
-                  when '土'
-                    'text-primary'
-                  when '日'
-                    'text-danger'
-                  end %>
-                  <td><%= l(day.worked_on, format: :short) %></td> 
-                  <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
-                  <td><%= day.plan_finished_at.strftime("%R") %></td>
-                  <td><%= format_basic_info(@user.designated_work_end_time) %></td>
-                  <td><%= day.over_time %></td>
-                  <td><%= day.business_processing_contents %></td>
-                    <td><%= a.select :overtime_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
-                    <td><%= a.check_box :change, {}, "true", "false" %></td>
-                    <td><%= link_to "確認", new_show_user_attendance_path(@user, day), class: "btn btn-primary" %></td>
+                  <th>日付</th>
+                  <th>曜日</th>
+                  <th>終了予定時間</th>
+                  <th>指定勤務終了時間</th>
+                  <th>時間外時間</th>
+                  <th>業務処理内容</th>
+                  <th>指示者確認</th>
+                  <th>変更</th>
+                  <th>勤怠を確認する</th>
                 </tr>
-              </tbody>
-              <% end %>
-            <% end %>
-          </table>
+              </thead>
+              
+              <!--ifのログインしてるuserと上長のカラム名が一緒であること、かつ申請中だったら表示する。かつattendance.idとuser.idが一緒であること！-->
+                <% @attendances.each do |day| %>
+                <% if current_user.name == day.instructor_confirmation && day.overtime_status == "申請中" && day.user_id == user.id %>
+                  <%= f.fields_for "attendances[]", day do |a| %> 
+                  <tbody>
+                    <tr>
+                      <% css_class = 
+                      case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
+                      when '土'
+                        'text-primary'
+                      when '日'
+                        'text-danger'
+                      end %>
+                      <td><%= l(day.worked_on, format: :short) %></td> 
+                      <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+                      <td><%= day.plan_finished_at.strftime("%R") %></td>
+                      <td><%= format_basic_info(@user.designated_work_end_time) %></td>
+                      <td><%= day.over_time %></td>
+                      <td><%= day.business_processing_contents %></td>
+                        <td><%= a.select :overtime_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
+                        <td><%= a.check_box :change, {}, "true", "false" %></td>
+                        <td><%= link_to "確認", new_show_user_attendance_path(@user, day), class: "btn btn-primary" %></td>
+                    </tr>
+                  </tbody>
+                  <% end %>
+                <% end %>  
+                <% end %>
+            </table>
+          <% end %>
           <%= f.submit "変更を送信する", class: "btn btn-primary" %>
         <% end %>
-        <% end %>
-      </div>  
+            </div>
+        </div>  
     </div>
   </div>
-</div>
+</div>  
             
+              
               
               
