--- a/app/views/attendances/_edit_superior_announcement.html.erb
+++ b/app/views/attendances/_edit_superior_announcement.html.erb
@@ -1,12 +1,12 @@
 <div class="modal-dialog modal-lg modal-dialog-center">
   <div class="modal-content">
     <div class="modal-header", style="border:none">
+        <%= form_with(model: @user, url: update_superior_announcement_user_attendances_path(@user), method: :patch, local: true) do |f| %>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;
         </span>
         </button>
       <!--tableの外にform_withがある場合はtableの外にsubmitを書く-->  
-        <%= form_with(model: @user, url: update_superior_announcement_user_attendances_path(@user), method: :patch, local: true) do |f| %>
           <% @users.each do |user| %>    
       <h1 class="modal-title" , style="text-align:center">[<%= user.name %>からの残業申請]</h1>
         <div class="modal-body">
@@ -48,7 +48,7 @@
                         <td><%= day.business_processing_contents %></td>
                           <td><%= a.select :overtime_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
                           <td><%= a.check_box :change, {}, "true", "false" %></td>
-                          <td><%= link_to "確認", new_show_user_attendance_path(@user, day), class: "btn btn-primary" %></td>
+                          <td><%= link_to "確認", new_show_user_attendance_path(user, day), class: "btn btn-primary" %></td>
                       </tr>
                     </tbody>
                     <% end %>
