一ヵ月分勤怠編集とりあえずモーダル作成

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,7 +26,7 @@
 </div>
 <% if current_user.superior? %>
 <div>
-  [所属長承認のお知らせ]
+  <%= link_to"[所属長承認のお知らせ]", edit_superior_approval_user_attendances_path(@user), remote: true, class: "btn-danger" %>
 </div>
 <div>
   [勤怠変更お知らせ]
@@ -139,12 +139,14 @@
           <td colspan = "6"></td>
           <td><%= format("%.2f", @total_working_times.to_f) %></td>
           <td colspan="5"></td>
-          <td>所属長承認&emsp;<br><%= link_to "申請", edit_overwork_request_user_attendance_path(@user), remote: true, class: "btn btn-primary" %></td>
+          <td>所属長承認&emsp;
+          <br><%= link_to "申請", edit_overwork_request_user_attendance_path(@user), remote: true, class: "btn btn-primary" %></td>
           </td>
         </tr>
       </tfoot>
     </table>
   </div>
+  <div id="edit-superior-approval" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
   <div id="edit-overwork-request" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
   <div id="kintailog" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
   <div id="edit-superior-announcement" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
