--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -12,7 +12,7 @@
         <th>翌日</th>
         <th>在社時間</th>
         <th>備考</th>
-        <th>指示者</th>
+        <th>指示者確認㊞</th>
       </tr>
     </thead>
     <tbody>
@@ -42,7 +42,7 @@
           </td>
           <td><%= attendance.text_field :note, class: "form-control" %></td>
           <td><%= attendance.text_field :note, class: "form-control" %></td>
-          <td><%= attendance.text_field :note, class: "form-control" %></td>
+          <td><%= attendance.text_field :instructor_confirmation, class: "form-control" %></td>
         </tr>
         <% end %>
       <% end %>
