--- a/app/views/attendances/_attendance_change.html.erb
+++ b/app/views/attendances/_attendance_change.html.erb
@@ -1,12 +1,12 @@
  <div class="modal-dialog modal-lg modal-dialog-center">
     <div class="modal-content">
       <div class="modal-header">
-        <%= form_with(model: @user, url: update_superior_announcement_user_attendances_path(@user), method: :patch, local: true) do |f| %>
+          <%= form_with(model: @user, url: update_attendance_change_user_attendances_path(@user), method: :patch, local: true) do |f| %>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-         
-        <h1 class="modal-title">テストからの1ヵ月申請</h1>
+          <% @users.each do |user| %>    
+        <h1 class="modal-title"><%= user.name %>からの1ヵ月申請</h1>
       </div>
         <div class="modal-body">
           <table class="table table-bordered table-condensed table-hover" id="table-attendances">
@@ -61,15 +61,17 @@
               <td><%= day.started_at.floor_to(15.minutes).strftime('%M') if day.started_at.present? %></td>
               <td><%= day.finished_at.strftime('%-H') if day.finished_at.present? %></td>
               <td><%= day.finished_at.floor_to(15.minutes).strftime('%M') if day.finished_at.present? %></td>
-              <td></td>
+              <td><%= a.text_field :note, class: "form-control" %></td>
               <td><%= a.select :overtime_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
               <td><%= a.check_box :change, {}, "true", "false" %></td>
-              <td></td>
+              <td><%= link_to "確認", new_show_user_attendance_path(user, day), class: "btn btn-primary" %></td>
              </tbody>
               <% end %>
                 <% end %>
           </table>  
-        <% end %>
+          <% end %>
+           <%= f.submit "変更を送信する", class: "btn btn-primary" %>
+          <% end %>
         </div>
       </div>    
     </div>
