--- a/app/views/attendances/_edit_superior_approval.html.erb
+++ b/app/views/attendances/_edit_superior_approval.html.erb
@@ -4,20 +4,16 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h1 class="modal-title">テストからの1ヵ月申請</h1>
+        <h1 class="modal-title">テストからの一か月分勤怠申請</h1>
       </div>
         <div class="modal-body">
           <table class="table table-bordered table-condensed table-hover" id="table-attendances">
             <thead>
               <tr>
-              <th rowspan = "3">日付</th>
-              <th rowspan = "3">曜日</th>
-              <th rowspan = "1">変更前</th>
-              <th rowspan = "1">変更後</th>
-              <th rowspan = "3">備考</th>
-              <th rowspan = "3">指示者確認㊞</th>
-              <th rowspan = "3">変更</th>
-              <th rowspan = "3">勤務を確認する</th>
+                <th>月</th>
+                <th>指示者確認</th>
+                <th>変更</th>
+                <th>勤怠を確認する</th>
               </tr>
             </thead>
           </table>  
