--- a/app/views/attendances/edit_one_month.html.erb
+++ b/app/views/attendances/edit_one_month.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, @user.name) %>
-<%= form_with(model: @user, url: attendances_update_one_month_user_path(date: @first_day), local: true, method: :patch) do |f| %>
+<%= form_with(model: @user, url: attendances_update_one_month_user_path(@attendance, @user), local: true, method: :patch) do |f| %>
 <div>
   <h1>勤怠編集画面</h1>
   <table class="table table-bordered table-condensed table-hover" id="table-attendances">
@@ -35,14 +35,14 @@
             <td><%= attendance.time_field :before_started_at, class: "form-control" %></td>
             <td><%= attendance.time_field :before_finished_at, class: "form-control" %></td>
           <% end %>
+          <td></td>
           <td>
             <% if day.before_started_at.present? && day.before_finished_at.present? %>
               <%= working_times(day.before_started_at, day.before_finished_at) %>
             <% end %>
           </td>
-          <td></td>
           <td><%= attendance.text_field :note, class: "form-control" %></td>
-          <td><%= attendance.text_field :instructor_confirmation, class: "form-control" %></td>
+          <td><%= attendance.collection_select :instructor_confirmation, @superior, :name, :name, {include_blank: true} %></td>
         </tr>
         <% end %>
       <% end %>
