--- a/app/views/attendances/_attendance_change.html.erb
+++ b/app/views/attendances/_attendance_change.html.erb
@@ -1,25 +1,26 @@
  <div class="modal-dialog modal-lg modal-dialog-center">
     <div class="modal-content">
       <div class="modal-header">
-          <%= form_with(model: @user, url: update_attendance_change_user_attendances_path(@user), method: :patch, local: true) do |f| %>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-            <% @attendances.each do |id, attendance| %>  
-          <h1 class="modal-title"><%= User.find(id).name %>からの1ヵ月申請</h1>
-        </div>
-          <div class="modal-body">
+      </div>
+      <div class="modal-body">
+        <%= form_with(model: @user, url: update_attendance_change_user_attendances_path(@user), method: :patch, local: true) do |f| %> 
+          <% @attendances.each do |id, attendance| %>  
+            <h1 class="modal-title"><%= User.find(id).name %>からの1ヵ月申請</h1>
+            
             <table class="table table-bordered table-condensed table-hover" id="table-attendances">
               <thead>
                 <tr>
-                <th rowspan = "3">日付</th>
-                <th rowspan = "3">曜日</th>
-                <th colspan = "4">変更前</th>
-                <th colspan = "4">変更後</th>
-                <th rowspan = "3">備考</th>
-                <th rowspan = "3">指示者確認㊞</th>
-                <th rowspan = "3">変更</th>
-                <th rowspan = "3">勤務を確認する</th>
+                  <th rowspan = "3">日付</th>
+                  <th rowspan = "3">曜日</th>
+                  <th colspan = "4">変更前</th>
+                  <th colspan = "4">変更後</th>
+                  <th rowspan = "3">備考</th>
+                  <th rowspan = "3">指示者確認㊞</th>
+                  <th rowspan = "3">変更</th>
+                  <th rowspan = "3">勤務を確認する</th>
                 </tr>
                 
                 <tr>
@@ -38,42 +39,42 @@
                   <th>時</th>
                   <th>分</th>
                 </tr>
-               </thead>
+              </thead>
                
-               <tbody>
-                <!--attendanceの中に風数のレコードが入っていて、dayに一つ-->
-                <% attendance.each do |day| %>
-                  <%= f.fields_for "attendances[]", day do |a| %>
-                <% css_class = 
-            case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
-            when '土'
-              'text-primary'
-            when '日'
-              'text-danger'
-            end %>
-                  <td><%= l(day.worked_on, format: :short) %></td>
-                  <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
-                  <td><%= day.started_at.strftime('%-H') if day.started_at.present? %></td>
-                  <td><%= day.started_at.floor_to(15.minutes).strftime('%M') if day.started_at.present? %></td>
-                  <td><%= day.finished_at.strftime('%-H') if day.finished_at.present? %></td>
-                  <td><%= day.finished_at.floor_to(15.minutes).strftime('%M') if day.finished_at.present? %></td>
-                  
-                  <td><%= day.before_started_at.strftime('%-H') if day.before_started_at.present? %></td>
-                  <td><%= day.before_started_at.floor_to(15.minutes).strftime('%M') if day.before_started_at.present? %></td>
-                  <td><%= day.before_finished_at.strftime('%-H') if day.before_finished_at.present? %></td>
-                  <td><%= day.before_finished_at.floor_to(15.minutes).strftime('%M') if day.before_finished_at.present? %></td>
-                  <td><%= a.text_field :note, class: "form-control" %></td>
-                  <td><%= a.select :change_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
-                  <td><%= a.check_box :change, {}, "true", "false" %></td>
-                  <td><%= link_to "確認", new_show_change_user_attendance_path(attendance, day), class: "btn btn-primary" %></td>
-               </tbody>
-                  <% end %>
+              <!--attendanceの中に風数のレコードが入っていて、dayに一つ-->
+                
+              <% attendance.each do |day| %>
+                <%= f.fields_for "attendances[]", day do |a| %>
+                  <tbody>
+                    <% css_class = 
+                    case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
+                    when '土'
+                      'text-primary'
+                    when '日'
+                      'text-danger'
+                    end %>
+                    <td><%= l(day.worked_on, format: :short) %></td>
+                    <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+                    <td><%= day.started_at.strftime('%-H') if day.started_at.present? %></td>
+                    <td><%= day.started_at.floor_to(15.minutes).strftime('%M') if day.started_at.present? %></td>
+                    <td><%= day.finished_at.strftime('%-H') if day.finished_at.present? %></td>
+                    <td><%= day.finished_at.floor_to(15.minutes).strftime('%M') if day.finished_at.present? %></td>
+                    
+                    <td><%= day.before_started_at.strftime('%-H') if day.before_started_at.present? %></td>
+                    <td><%= day.before_started_at.floor_to(15.minutes).strftime('%M') if day.before_started_at.present? %></td>
+                    <td><%= day.before_finished_at.strftime('%-H') if day.before_finished_at.present? %></td>
+                    <td><%= day.before_finished_at.floor_to(15.minutes).strftime('%M') if day.before_finished_at.present? %></td>
+                    <td><%= a.text_field :note, class: "form-control" %></td>
+                    <td><%= a.select :change_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
+                    <td><%= a.check_box :change, {}, "true", "false" %></td>
+                    <td><%= link_to "確認", new_show_change_user_attendance_path(id, day), class: "btn btn-primary" %></td>
+                  </tbody>
                 <% end %>
-            </table>  
-            <% end %>
-           <%= f.submit "変更を送信する", class: "btn btn-primary" %>
+              <% end %>
+            </table>
           <% end %>
-        </div>
-      </div>    
+          <%= f.submit "変更を送信する", class: "btn btn-primary" %>
+        <% end %>
+      </div>
     </div>
   </div>
