--- a/app/views/attendances/new_show_change.html.erb
+++ b/app/views/attendances/new_show_change.html.erb
@@ -54,4 +54,40 @@
         <th>分</th>
       </tr>
     </thead>
-  </table>  
+     <tbody>
+        <% @attendances.each do |day| %>
+        <% css_class = 
+          case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
+          when '土'
+            'text-primary'
+          when '日'
+            'text-danger'
+          end %>
+          <tr>
+            <td></td>
+            <td><%= l(day.worked_on, format: :short) %></td>
+            <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+            <td><%= day.started_at.strftime('%-H') if day.started_at.present? %></td>
+            <td><%= day.started_at.floor_to(15.minutes).strftime('%M') if day.started_at.present? %></td>
+            <td></td>
+            </td>
+            <td><%= day.finished_at.strftime('%-H') if day.finished_at.present? %></td>
+            <td><%= day.finished_at.floor_to(15.minutes).strftime('%M') if day.finished_at.present? %></td>
+            <td></td>
+            <td>
+              <% if day.started_at.present? && day.finished_at.present? %>
+                <%= str_times = working_times(day.started_at.floor_to(15.minutes), day.finished_at.floor_to(15.minutes)) %>
+                <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
+              <% end %>     
+            </td>
+            <td><%= day.note %></td>
+            <td><%= day.plan_finished_at.strftime('%H')if day.plan_finished_at.present? %></td>
+            <td><%= day.plan_finished_at.strftime('%M')if day.plan_finished_at.present? %></td>
+            <td></td>
+            <td><%= day.business_processing_contents %></td>
+            <td><%= day.instructor_confirmation %></td>
+          </tr>
+        <% end %>
+      </tbody>
+  </div>
+  </table>
