--- a/app/views/attendances/_attendance_change.html.erb
+++ b/app/views/attendances/_attendance_change.html.erb
@@ -1,14 +1,12 @@
  <div class="modal-dialog modal-lg modal-dialog-center">
     <div class="modal-content">
-      <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-      </div>
       <div class="modal-body">
         <%= form_with(model: @user, url: update_attendance_change_user_attendances_path(@user), method: :patch, local: true) do |f| %> 
           <% @attendances.each do |id, attendance| %>  
-            <h1 class="modal-title"><%= User.find(id).name %>からの1ヵ月申請</h1>
+            <h1 class="modal-title"><%= User.find(id).name %>からの勤怠変更申請</h1>
             
             <table class="table table-bordered table-condensed table-hover" id="table-attendances">
               <thead>
