--- a/app/views/attendances/_edit_superior_approval.html.erb
+++ b/app/views/attendances/_edit_superior_approval.html.erb
@@ -1,10 +1,12 @@
-  <div class="modal-dialog modal-lg modal-dialog-center">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-        <h1 class="modal-title">テストからの一か月分勤怠申請</h1>
+<div class="modal-dialog modal-lg modal-dialog-center">
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+        <%= form_with(model: @user, url: update_superior_announcement_user_attendances_path(@user), method: :patch, local: true) do |f| %>
+          <% @attendances.each do |id, attendance| %>
+        <h1 class="modal-title"><%= User.find(id).name %>からの一か月分勤怠申請</h1>
       </div>
         <div class="modal-body">
           <table class="table table-bordered table-condensed table-hover" id="table-attendances">
@@ -16,11 +18,26 @@
                 <th>勤怠を確認する</th>
               </tr>
             </thead>
-          </table>  
-        </div>
-      </div>    
+            
+            <% attendance.each do |day| %>
+             <%= f.fields_for "attendances[]", day do |a| %>
+              <tbody>
+                <tr>
+                  <td><%= l(@attendance.worked_on, format: :short) %></td>
+                  <td><%= a.select :user_one_month_attendance_status, [["承認"],["申請中"],["否認"],["なし"]] %></td>
+                  <td><%= a.check_box :change, {}, "true", "false" %></td>
+                  <td><%= link_to "確認", new_show_user_attendance_path(@user, day), class: "btn btn-primary" %></td>
+                </tr>
+              </tbody>
+              <% end %>
+            <% end %>
+          </table>
+          <% end %>  
+          <%= f.submit "編集を送信する", class: "btn btn-lg btn-default" %>
+        <% end %>
+      </div>
     </div>
-  </div>
+  </div>  
               
             
             
